continued testing doc pages

--- a/_docs/2022-08-22-NFT-as-ID.md
+++ b/_docs/2022-08-22-NFT-as-ID.md
@@ -3,7 +3,7 @@ layout: doc
 title: NFTs as Identification
 date: 2022-08-22 4:12:00 +0600
 post_image: assets/images/service-icon3.png
-tags:
+tags: [Concepts]
 toc: true
 ---
 <h1>Implementing NFTs as Identification Tokens </h1>
